z-index fix

--- a/src/components/landing-pages/brand/Hero/Hero.module.scss
+++ b/src/components/landing-pages/brand/Hero/Hero.module.scss
@@ -11,7 +11,6 @@
     padding-top: calc(110px + 96px);
     text-align: center;
     position: relative;
-    z-index: -1;
 
     h1 {
       margin-bottom: 40px;
@@ -23,7 +22,10 @@
     }
 
     a {
+      position: relative;
+      z-index: 2;
       padding: 16px !important;
+
       svg {
         transform: rotate(90deg);
       }
